welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:15: error: not found: value Brushup
  Brushup();
  ^FlowerPot:33: error: value Green is not a member of object java.awt.Color
  makeFlower(Color.Green);
                   ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^