welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
override def run() {
  makePattern();
}



def makeFlower(c:Color) {
  setBrushColor(c);
	brushDown();
  forward(2);
  backward(); left(); forward();
  backward(2);forward();right()
  
  setBrushColor(Color.yellow);
  Brushup();
  
}


def makePattern() {
  makeFlower(Color.red);
  
  forward(3);
  makeFlower(Color.cyan);
  
  backward(3); right(); forward(2); left();
	makeFlower(Color.orange);
  
  backward(3); right(); forward(2); left();
  makeFlower(Color.pink);
  
  forward(3);
  makeFlower(Color.Green);

  
}